scrollbar fix for <1024

--- a/css/wrioos.css
+++ b/css/wrioos.css
@@ -136,7 +136,7 @@ div#sidebar.navbar-fixed-top{height:100vh;overflow-y:scroll}
 .btn-group-sm .btn, .btn-group-sm .navbar .navbar-nav>li>a.btn, .btn.btn-sm, .navbar .navbar-nav>li>a.btn.btn-sm{font-size:12px}
 /* END */
 
-@media (min-width: 768px) {
+@media (min-width: 1024px) {
   .cover{top:.5rem}
   #cd-vertical-nav{display:none !important}
   #sidebar{display:block !important}
